compiler/lume_parse/src/snapshots/lume_parse__tests__trait_snapshots@constrained_generics.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"trait Add<T1: Numeric, T2: Numeric> {}\")"
---
SOURCE_FILE@0..33
  TRAIT@0..33
    TRAIT_KW@0..5 "trait"
    IDENT@5..8 "Add"
    BOUND_TYPES@8..31
      LESS@8..9 "<"
      BOUND_TYPE@9..19
        IDENT@9..11 "T1"
        CONSTRAINTS@11..19
          COLON@11..12 ":"
          PATH@12..19
            PATH_TYPE@12..19
              IDENT@12..19 "Numeric"
      COMMA@19..20 ","
      BOUND_TYPE@20..30
        IDENT@20..22 "T2"
        CONSTRAINTS@22..30
          COLON@22..23 ":"
          PATH@23..30
            PATH_TYPE@23..30
              IDENT@23..30 "Numeric"
      GREATER@30..31 ">"
    LEFT_BRACE@31..32 "{"
    RIGHT_BRACE@32..33 "}"
