compiler/lume_parse/src/snapshots/lume_parse__tests__trait_snapshots@generic.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"trait Add<T> { }\")"
---
SOURCE_FILE@0..16
  TRAIT@0..16
    TRAIT_KW@0..5 "trait"
    WHITESPACE@5..6 " "
    NAME@6..9
      IDENT@6..9 "Add"
    BOUND_TYPES@9..12
      LESS@9..10 "<"
      BOUND_TYPE@10..11
        NAME@10..11
          IDENT@10..11 "T"
      GREATER@11..12 ">"
    WHITESPACE@12..13 " "
    LEFT_BRACE@13..14 "{"
    WHITESPACE@14..15 " "
    RIGHT_BRACE@15..16 "}"
