compiler/lume_parse/src/snapshots/lume_parse__tests__trait_snapshots@method_no_ret.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"trait Add { fn add(other: Int32) { } }\")"
---
SOURCE_FILE@0..38
  TRAIT@0..38
    TRAIT_KW@0..5 "trait"
    WHITESPACE@5..6 " "
    NAME@6..9
      IDENT@6..9 "Add"
    WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    WHITESPACE@11..12 " "
    METHOD@12..36
      SIG@12..32
        FN_KW@12..14 "fn"
        WHITESPACE@14..15 " "
        NAME@15..18
          IDENT@15..18 "add"
        PARAM_LIST@18..32
          LEFT_PAREN@18..19 "("
          PARAM@19..31
            NAME@19..24
              IDENT@19..24 "other"
            COLON@24..25 ":"
            WHITESPACE@25..26 " "
            NAMED_TYPE@26..31
              PATH@26..31
                PATH_SEGMENT@26..31
                  PATH_TYPE@26..31
                    NAME@26..31
                      IDENT@26..31 "Int32"
          RIGHT_PAREN@31..32 ")"
      WHITESPACE@32..33 " "
      BLOCK@33..36
        LEFT_BRACE@33..34 "{"
        WHITESPACE@34..35 " "
        RIGHT_BRACE@35..36 "}"
    WHITESPACE@36..37 " "
    RIGHT_BRACE@37..38 "}"
